fixes for one product and shop pages. Desktop hover. And remove hover on mobile

--- a/wp-content/themes/u-design-child/assets/css/main.css
+++ b/wp-content/themes/u-design-child/assets/css/main.css
@@ -8736,7 +8736,11 @@ After hover on news item, block "section-news-hover-wrapper" becomes visible.*/
   }
 }
 @media screen and (max-width: 1024px) {
-  #main-content .shop-custom-wrapper ul.products li.product.product-desktop:hover .price {
+  #main-content
+    .shop-custom-wrapper
+    ul.products
+    li.product.product-desktop:hover
+    .price {
     padding-bottom: 20px;
   }
 
@@ -8747,7 +8751,11 @@ After hover on news item, block "section-news-hover-wrapper" becomes visible.*/
     li.category-filter-item {
     margin-right: 30px;
   }
-  #main-content .shop-custom-wrapper ul.products li.product.product-desktop:hover .price {
+  #main-content
+    .shop-custom-wrapper
+    ul.products
+    li.product.product-desktop:hover
+    .price {
     padding-bottom: 5px;
   }
   #main-content
